--- a/forminput.css
+++ b/forminput.css
@@ -10,7 +10,9 @@
 }
 
 .form-style form {
+    position: fixed;
 	margin:auto;
+    top: 100px;
     max-width:210px;
 	position:relative;
 	padding:10px;
@@ -69,7 +71,7 @@
 .form-style h1{
 	display: block;
 	font-size: 24px;
-	color: #B9B9B9;
+	color: #2471FF;
 	padding: 6px;
 
 }
